# strongFormat

./: .gitignore  README.md  git_updata.sh
docs/: README.md  _sidebar.md  index.html  language.md  theory.md  use.md
example/: CMakeLists.txt  example.h  example.sfmt  example0.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  noteEraser.cpp  test.cpp  test_.cpp
example/Test/: Test.cpp  Test.sln  Test.vcxproj
include/: strongFormat.hpp  strongFormatParsing.hpp  strongRegularExpression.hpp  strongRegularExpressionParsing.hpp
